updated swagger for exercise route
