# models/recipem.js
@@ -1,4 +1,3 @@
-const Joi = require('joi');
 const mongoose = require('mongoose');
 
 const Recipe = mongoose.model('Recipe', new mongoose.Schema({
@@ -56,23 +55,4 @@ const Recipe = mongoose.model('Recipe', new mongoose.Schema({
         })
         )
 
-        // function recipeValidate(recipe){
-        //     const schema = {
-        //         recipeType   : Joi.required().string(),
-        //         description  : Joi.required(),
-        //         ingrediants : Joi.required().string(),
-        //         carbohydrates : Joi.required().string(),
-        //         fat : Joi.required().string(),
-        //         calories : Joi.required().string(),
-        //         recipeName : Joi.required().string(),
-        //         cookingProcess : Joi.required().string(),
-        //         provideYouTubeLink : Joi.required().string(),
-        //         protein : Joi.required().string(),
-        //         fiber : Joi.required().string(),
-        //         recipeImage : Joi.required(),
-        //     }
-        //     return Joi.validate(recipe,schema)
-        // }
-
         module.exports.Recipe = Recipe;
-        // module.exports.recipeValidate = recipeValidate;
